# graph-massivizer-toolkit

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yaml  graph.txt  main.py  setup.cfg  simulate.sh  start_metaphactory.sh  stop_metaphactory.sh
.github/workflows/: master.yaml
commons/: terminal.py
components/: base_component.py  choreographer.py  greenifier.py  inceptor.py  optimizer.py  scrutinizer.py  user.py
components/client/: Dockerfile  client.py  requirements.txt
components/client/templates/: index.html
components/master/: Dockerfile  choreographer.py  main.py  requirements.txt  workload_manager.py
components/master/core/: topology.py
components/master/opitimisation/: greenifier.py  optimizer.py
components/master/templates/: index.html
components/metafactory/: Dockerfile  metafactory.py
components/runtime/: inceptor.py
components/worker/: Dockerfile  main.py  scrutinizer.py
core/: bgo.py  bgo_cost_req.py  bgo_cost_res.py  bgo_green_res.py  bgo_hardware_res.py  bgo_impl_req.py  bgo_impl_res.py  bgo_inp_req.py  bgo_inp_res.py  bgo_opt_res.py  factory.py  graph_handle.py  hardware.py  message.py
core/commons/: terminal.py
core/dataflow/logical/: execution_node.py  logical_dataflow.py  logical_node.py
core/descriptors/: descriptors.py
diagrams/: 0_1_overall_squence_diagram.txt  0_2_graph-massivizer_toolkit.txt  1_0_bgo_registration.txt  2_0_data_source_registration.txt  2_1_register_data_source.txt  2_2_ingest_data_using_etl_pipeline.txt  2_3_ingest_data_using_graphma.txt  3_0_user_defined_workflow.txt  4_0_workflow_execution.txt  4_1_optimize_workflow.txt  4_1a_optimize_workflow.txt  4_1b_optimize_workflow.txt  4_1b_part1_bgo_lookup.txt  4_1b_part2_graph_handle_lookup.txt  4_2_greenify_workflow.txt  4_3_schedule_workflow.txt  4_4_deploy_workflow.txt  4_5_execute_workflow.txt  5_0_use_case_0.txt  5a_use_case_0.txt  5b_use_case_0.txt  accessing_rdf_data_in_the_graph_database.txt  etl_ingestion_process.txt  graph_processing.txt  ingesting_non_rdf_data.txt
environment/: cluster.py  network.py  node.py
executables/: cli.py
management/: lifecycle_manager.py
metaphactory/graph-massivizer-toolkit/: .env  docker-compose.overwrite.yml  docker-compose.yml
metaphactory/graph-massivizer-toolkit/apps/graph-massivizer-toolkit/: build.gradle  plugin.properties
metaphactory/graph-massivizer-toolkit/database-config/: docker-compose.graphdb.yml
metaphactory/graph-massivizer-toolkit/graphdb-data/data/: users.js
metaphactory/graph-massivizer-toolkit/graphdb-data/work/: runtime.properties
metaphactory/graph-massivizer-toolkit/metaphactory-graphdb/: docker-compose.yml
runtime/task_manager/: main.py  operator_driver.py  task_execution_manager.py  task_execution_unit.py  task_runtime.py
runtime/workload_manager/: Dockerfile  data_manager.py  deployer.py  execution_controller.py  infrastructure_manager.py  main.py  paralizer.py  scheduler.py
simulation/: cluster.py  lifecycle.py  lifecycle_manager.py  node.py
src/core/descriptors/: __init__.py  descriptor_factory.py  descriptors.py
src/core/opitimisation/: greenifier.py  optimizer.py
src/graphmassivizer/infrastructure/: components.py  config.yaml
src/graphmassivizer/monitoring/: api.py  dashboard.py  server.py
src/graphmassivizer/runtime/: start.sh
src/graphmassivizer/simulation/: cluster.py  lifecycle.py  network.py  node.py
src/monitoring/: server.py
src/monitoring/templates/: index.html
src/runtime/task_manager/: Dockerfile  main.py  task_execution_manager.py
src/runtime/workload_manager/: Dockerfile  deployer.py  execution_controller.py  infrastructure_manager.py  main.py  optimization_1.py  optimization_2.py  parallelizer.py  scheduler.py
src/simulation/: cluster.py  lifecycle.py  network.py  node.py
tests/: dag_processing_test.py  example_test.py  example_test2.py
tests/resources/: minimalWorkflow.csv  subgraph.el  workflow.json
(+136 files in other folders)
