##########################
# Setup.py Configuration #
##########################
[metadata]
name = graph-massivizer
version = 0.0.5
description = The Graph Massivizer platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://graph-massivizer.eu/
maintainer = The Graph Massivizer project
maintainer_email = nospam@nospam.com
project_urls =
    Bug Tracker = https://github.com/graph-massivizer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
install_requires =
    kazoo==2.10.0

# Where is my code
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
test =
    flake8
    mypy
    pytest
    unittest-templates
dev =
    ipykernel

doc = 
    pdoc

#[options.entry_points]
## We can setup a CLI entry point later on
# console_scripts =
#     gm = gm:main

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# line too long
    E501

import-order-style = pycharm

application-import-names =
    gm

exclude =


########################
# mypy Configuration   #
# (mypy.ini)           #
########################

[mypy]

[mypy-class_resolver]
ignore_missing_imports = True

[mypy-unittest_templates]
ignore_missing_imports = True


########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    # name: description
