##########################
# Setup.py Configuration #
##########################
[metadata]
name = graphmassivizer
version = 0.0.5
description = The Graph Massivizer platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://graph-massivizer.eu/
maintainer = The Graph Massivizer project
maintainer_email = nospam@nospam.com
project_urls =
    Bug Tracker = https://github.com/graph-massivizer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
install_requires =
    kazoo==2.10.0
    blinker==1.9.0
    certifi==2024.8.30
    charset-normalizer==3.4.0
    click==8.1.7
    colorama==0.4.6
    docker==7.1.0
    Flask==3.1.0
    idna==3.10
    itsdangerous==2.2.0
    Jinja2==3.1.4
    kazoo==2.10.0
    MarkupSafe==3.0.2
    requests==2.32.3
    six==1.16.0
    transitions==0.9.2
    urllib3==2.2.3
    Werkzeug==3.1.3
    python-statemachine>=2.5.0
    networkx >= 3.4.2

# Where is my code
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
test =
    flake8
    mypy
    pytest
    unittest-templates
    pandas
dev =
    ipykernel

doc = 
    pdoc

visualization = 
# to make vizualisation work, we use pydot, but this also requires graphviz to be natively installed!
    pydot >= 2.0.0


#[options.entry_points]
## We can setup a CLI entry point later on
# console_scripts =
#     gm = gm:main

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# line too long
    E501
    E303

import-order-style = pycharm

application-import-names =
    gm

exclude =


########################
# mypy Configuration   #
# (mypy.ini)           #
########################

[mypy]

[mypy-class_resolver]
ignore_missing_imports = True

[mypy-unittest_templates]
ignore_missing_imports = True


########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    # name: description
